--- a/templates/404.html
+++ b/templates/404.html
@@ -5,8 +5,8 @@
 {% block container %}
     <div class="panel col-md-8 col-md-offset-2 panel-body">
         <!-- Image -->
-        <div id="image" class="col-md-4 password-recovery-image-div">
-            <img src="{% static 'webapp/image/logo_key_shaped.png' %}" class="password-recovery-image">
+        <div id="image" class="col-md-4 error-page-icon">
+            <img src="{% static 'webapp/image/logo_big.png' %}" class="password-recovery-image">
 	    </div>
 
         <!-- Message -->
