Añadido checkbox, texto y link en creacion de cuenta para los terminos y condiciones.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1488,3 +1488,13 @@ footer {
     height: inherit;
     width: inherit;
 }
+
+.termsandcond {
+    color: #cc3e27;
+    font-weight: bold;
+}
+
+.termsandcond:hover {
+    color: #cc3e27;
+    font-weight: bold;
+}
