--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -399,6 +399,17 @@
         </div>
     </fieldset>
 
+    <br />
+
+    <div class="checkbox">
+        <label>
+            <input type="checkbox"> {% trans "I have read and I accept " %} <a class="termsandcond" href="{% url 'terms_and_conditions' %}"> {% trans "the terms and conditions" %} </a>
+        </label>
+    </div>
+
+    <br />
+    <br />
+
     <!-- Submit Button -->
     <div class="form-group">
         <label for="inputDisplayName" class="col-sm-1 control-label"></label>
