Quitadas tarjetas de fondo en acerca de

--- a/templates/webapp/about.html
+++ b/templates/webapp/about.html
@@ -14,7 +14,7 @@
         <div class="row">
             <!-- panel -->
             <div class="col-md-4 panel-about-container">
-                <div class="panel panel-body panel-about">
+                <div class=" panel-body panel-about">
                     <h2 class="about-title">{% trans "Create" %}</h2>
 
                     <p class="text-soft about-description">
@@ -31,7 +31,7 @@
 
             <!-- panel -->
             <div class="col-md-4 panel-about-container">
-                <div class="panel panel-body panel-about">
+                <div class=" panel-body panel-about">
                     <h2 class="about-title">{% trans "Improve" %}</h2>
 
                     <p class="text-soft about-description">
@@ -46,7 +46,7 @@
 
             <!-- panel -->
             <div class="col-md-4 panel-about-container">
-                <div class="panel panel-body panel-about">
+                <div class=" panel-body panel-about">
                     <h2 class="about-title">{% trans "Social" %}</h2>
 
                     <p class="text-soft about-description">
