Añadido checkbox para aceptar los términos y condiciones cuando se registra un usuario. Se controla que no aparezca en la edición del perfil.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1632,3 +1632,14 @@ footer {
     background-color: #cc3e27 !important;
     border-color: #a23422 !important;
 }
+
+
+ .termsandcond {
+     color: #cc3e27;
+     font-weight: bold;
+ }
+
+ .termsandcond:hover {
+     color: #cc3e27;
+     font-weight: bold;
+  }
