--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -138,6 +138,8 @@
                     $('#at').attr('value', result['access_token']);
                     $('#google-plus').submit();
                 }
+            }else {
+                gapi.auth.signOut();
             }
         };
     </script>
