--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -796,7 +796,7 @@
             <label for="inputDisplayName" class="col-sm-1 control-label"></label>
 
             <div class="col-sm-3">
-                <input type="submit" class="btn btn-success" value="Publish recipe"/>
+                <input type="submit" class="btn btn-success" value="{% trans "Publish recipe" %}"/>
             </div>
             <div class="col-sm-3">
                 <a class="btn btn-info">{% trans "Save as draft"%}</a>
