Fix: Acortado con puntos suspensivos el texto en la página de resultados de búsqueda.
Añadida llamada a la función del dotdotdot

--- a/templates/webapp/search_recipe_result.html
+++ b/templates/webapp/search_recipe_result.html
@@ -20,6 +20,12 @@
             $('.slider').slider();
         });
     </script>
+    <script src="{% static 'webapp/js/jquery.dotdotdot.min.js' %}"></script>
+    <script>
+        $().ready(function () {
+            $(".main-card-content").dotdotdot();
+        });
+    </script>
 {% endblock %}
 
 {% block container %}
